update: logo foto

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     </head>
     <body>
         <header>
-            <img src="logo-photo.png" alt="logo midnight news">
+            <img src="imagens/logo-photo.png" alt="logo midnight news">
 
             <nav>
                 <ul>
                     <li>Home</li>
-                    <li>Home</li>
-                    <li>Home</li>
+                    <li>Sobre Nós</li>
+                    <li>Entre em Contato</li>
                 </ul>
             </nav>
         </header>
