add: navbar finalizada

--- a/index.html
+++ b/index.html
@@ -8,24 +8,28 @@
     </head>
     <body>
         <header>
-            <img src="imagens/logo-photo.png" alt="logo midnight news">
-
             <nav>
+                <img src="imagens/midnight-logo.png" alt="logo midnight news">
                 <ul>
-                    <li>Home</li>
-                    <li>Sobre Nós</li>
-                    <li>Entre em Contato</li>
+                    <a><li>Home</li></a>
+                    <a><li>Sobre Nós</li></a>
+                    <a><li>Entre em Contato</li></a>
                 </ul>
             </nav>
         </header>
         <main>
+            <!-- BANNER -->
+            <div>
+
+            </div>
+
+            <!-- BOXES -->
             <div>
 
             </div>
             <div>
-
+                
             </div>
-            <div></div>
         </main>
         <aside>
 
