add: banner fofoca

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </header>
         <main>
             <!-- BANNER -->
-            <div>
-
+            <div id="banner-principal">
+                <img src="imagens/notícias/banner-triangulo.png" alt="manchete do triângulo amoroso entre Sabrina Carpenter, Shawn Mendes e Camila Cabello" >
             </div>
 
             <!-- BOXES -->
@@ -28,7 +28,7 @@
 
             </div>
             <div>
-                
+
             </div>
         </main>
         <aside>
