--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
         <main>
             <!-- BANNER -->
             <div id="banner-principal">
-                <img src="imagens/notícias/banner-triangulo.png" alt="manchete do triângulo amoroso entre Sabrina Carpenter, Shawn Mendes e Camila Cabello" >
+                <a href="banner.html" target="_blank">
+                    <div class="banner-image">
+                        <h2>Entenda: O que realmente ocorreu entre SxSxC (Sabrina, Shawn e Camila)</h3> 
+                    </div>
+                </a>
             </div>
 
             <!-- BOXES -->
@@ -38,4 +42,5 @@
 
         </footer>
     </body>
+    <script src="animacoes.js"></script>
 </html>
