add: banner logo e noticias hr

--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
             <!-- BANNER -->
             <div id="banner-principal">
                 <a href="banner.html" target="_blank">
-                    <div class="banner-image">
-                        <h2>Entenda: O que realmente ocorreu entre SxSxC (Sabrina, Shawn e Camila)</h3> 
-                    </div>
+                    <div class="banner-image"></div>
+                    <h2>Entenda: O que realmente ocorreu entre SxSxC (Sabrina, Shawn e Camila)</h2>
                 </a>
             </div>
 
             <!-- BOXES -->
+            <h3>Notícias</h3>
+            <hr>
             <div>
 
             </div>
