add: tag a e div para noticias

--- a/index.html
+++ b/index.html
@@ -30,10 +30,18 @@
             <h3>Notícias</h3>
             <hr>
             <div>
+                <a>
+                    <div class="not-image">
 
+                    </div>
+                </a>
             </div>
             <div>
+                <a>
+                    <div class="not-image">
 
+                    </div>
+                </a>
             </div>
         </main>
         <aside>
