add: link href sem fundo

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
             <h3>Notícias</h3>
             <hr>
             <div>
-                <a>
+                <a href="#" target="_blank">
                     <div class="not-image">
 
                     </div>
                 </a>
             </div>
             <div>
-                <a>
+                <a href="#" target="_blank">
                     <div class="not-image">
 
                     </div>
