--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <div class="not-image">
 
                     </div>
+                    <h4>Não reputou? Dicas que Rep Tv está mais próximo do que você imagina</h4>
                 </a>
             </div>
             <div>
@@ -41,6 +42,7 @@
                     <div class="not-image">
 
                     </div>
+                    <h4>Katy Florry? Entenda a avalanche de hate</h4>
                 </a>
             </div>
         </main>
