--- a/index.html
+++ b/index.html
@@ -27,23 +27,25 @@
             </div>
 
             <!-- BOXES -->
-            <h3>Notícias</h3>
-            <hr>
-            <div>
-                <a href="#" target="_blank">
-                    <div class="not-image">
+            <div id="noticias-boxes">
+                <h3>Notícias</h3>
+                <hr>
+                <div>
+                    <a href="#" target="_blank">
+                        <div class="not-image">
 
-                    </div>
-                    <h4>Não reputou? Dicas que Rep Tv está mais próximo do que você imagina</h4>
-                </a>
-            </div>
-            <div>
-                <a href="#" target="_blank">
-                    <div class="not-image">
+                        </div>
+                        <span>Não reputou? Dicas que Rep Tv está mais próximo do que você imagina</span>
+                    </a>
+                </div>
+                <div>
+                    <a href="#" target="_blank">
+                        <div class="not-image">
 
-                    </div>
-                    <h4>Katy Florry? Entenda a avalanche de hate</h4>
-                </a>
+                        </div>
+                        <span>Katy Floprry? Entenda a avalanche de hate</span>
+                    </a>
+                </div>
             </div>
         </main>
         <aside>
