add: imagens estilo

--- a/index.html
+++ b/index.html
@@ -30,21 +30,23 @@
             <div id="noticias-boxes">
                 <h3>Notícias</h3>
                 <hr>
-                <div>
-                    <a href="#" target="_blank">
-                        <div class="not-image">
+                <div class="noticias">
+                    <div>
+                        <a href="#" target="_blank">
+                            <div class="not-image taylor">
 
-                        </div>
-                        <span>Não reputou? Dicas que Rep Tv está mais próximo do que você imagina</span>
-                    </a>
-                </div>
-                <div>
-                    <a href="#" target="_blank">
-                        <div class="not-image">
+                            </div>
+                            <span>Não reputou? Dicas que Rep Tv está mais próximo do que você imagina</span>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#" target="_blank">
+                            <div class="not-image katy">
 
-                        </div>
-                        <span>Katy Floprry? Entenda a avalanche de hate</span>
-                    </a>
+                            </div>
+                            <span>Katy Floprry? Entenda a avalanche de hate</span>
+                        </a>
+                    </div>
                 </div>
             </div>
         </main>
