update: finalização grid estilo

--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
                 <h3>Notícias</h3>
                 <hr>
                 <div class="noticias">
-                    <div>
+                    <div class="taylor">
                         <a href="#" target="_blank">
-                            <div class="not-image taylor">
+                            <div class="not-image">
 
                             </div>
-                            <span>Não reputou? Dicas que Rep Tv está mais próximo do que você imagina</span>
+                            <p>Não reputou? Veja indícios que Reputation Taylor's Version está mais próximo do que você imagina</p>
                         </a>
                     </div>
-                    <div>
+                    <div class="katy">
                         <a href="#" target="_blank">
-                            <div class="not-image katy">
+                            <div class="not-image">
 
                             </div>
-                            <span>Katy Floprry? Entenda a avalanche de hate</span>
+                            <p>Katy Floprry? Entenda todo hate recebido na era 143 da cantora estadunidense</p>
                         </a>
                     </div>
                 </div>
