updates: correções visuais

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <div class="not-image">
 
                             </div>
-                            <p>Katy Floprry? Entenda todo hate recebido na era 143 da cantora estadunidense</p>
+                            <p>Katy Floperry? Entenda todo hate recebido na era 143 da cantora estadunidense</p>
                         </a>
                     </div>
                 </div>
