update: adição de pastas

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="estilo.css" media="screen" />
+        <link rel="stylesheet" type="text/css" href="css/estilo.css" media="screen" />
         <title>Midnight News</title>
     </head>
     <body>
@@ -13,7 +13,7 @@
                 <ul>
                     <a><li>Home</li></a>
                     <a><li>Sobre Nós</li></a>
-                    <a><li>Entre em Contato</li></a>
+                    <a><li>Fofoca da Madruga</li></a>
                 </ul>
             </nav>
         </header>
@@ -33,17 +33,13 @@
                 <div class="noticias">
                     <div class="taylor">
                         <a href="#" target="_blank">
-                            <div class="not-image">
-
-                            </div>
+                            <div class="not-image"></div>
                             <p>Não reputou? Veja indícios que Reputation Taylor's Version está mais próximo do que você imagina</p>
                         </a>
                     </div>
                     <div class="katy">
                         <a href="#" target="_blank">
-                            <div class="not-image">
-
-                            </div>
+                            <div class="not-image"></div>
                             <p>Katy Floperry? Entenda todo hate recebido na era 143 da cantora estadunidense</p>
                         </a>
                     </div>
@@ -51,11 +47,10 @@
             </div>
         </main>
         <aside>
-
         </aside>
         <footer>
 
         </footer>
     </body>
-    <script src="animacoes.js"></script>
+    <script src="js/animacoes.js"></script>
 </html>
