add: finalização index

--- a/index.html
+++ b/index.html
@@ -43,10 +43,8 @@
                     <h3>Anuncie Aqui</h3>
                     <hr>
                     <p>Deseja ser uma das centenas de patrocinadores e ter seu negócio apresentado aqui? Entre em contato com nossa equipe:</p>
-                    <ul>
-                        <li>midnightnews@gmail.com</li>
-                        <li>(11) 95748-3872</li>
-                    </ul>
+                    <p class="center">midnightnews@gmail.com</p>
+                    <p class="center">(11) 95748-3872</p>
                 </div>
             </div>
         </aside>
