update: atualizações no aside

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
                         <label for="data">Quando ocorreu</label>
                         <input type="date" id="data" name="data">
                       
-                        <label for="gossip">Midnights Gossip</label>
+                        <label for="gossip">Midnight Gossip</label>
                         <textarea id="gossip" name="gossip"></textarea>
                       
                         <input type="submit" value="Enviar">
                       </form>
                 </div>
                 <div>
-                    <h3>Anuncie Aqui</h3>
+                    <h3 class="ad">Anuncie Aqui</h3>
                     <hr>
                     <p>Deseja ser uma das centenas de patrocinadores e ter seu negócio apresentado aqui? Entre em contato com nossa equipe:</p>
                     <p class="center">midnightnews@gmail.com</p>
