--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
         </main>
         
         <footer>
-
+            <adress>
+                Midnights News Enterprise<br>Guarulhos, SP, 64533-040.
+              </adress>
+            <p>MidnightsNews - Todos os direitos Reservados - 2024</p>
         </footer>
     </body>
     <script src="js/animacoes.js"></script>
