add: link no index

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <nav>
                 <img src="imagens/midnight-logo.png" alt="logo midnight news">
                 <ul>
-                    <a><li>Home</li></a>
+                    <a href="index.html"><li>Home</li></a>
                     <a><li>Sobre Nós</li></a>
                     <a><li>Fofoca da Madruga</li></a>
                 </ul>
