add: paginas site

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
                 <img src="imagens/midnight-logo.png" alt="logo midnight news">
                 <ul>
                     <a href="index.html"><li>Home</li></a>
-                    <a><li>Sobre Nós</li></a>
-                    <a><li>Fofoca da Madruga</li></a>
+                    <a href="about.html"><li>Sobre Nós</li></a>
+                    <a href="gossip.html"><li>Fofoca da Madruga</li></a>
                 </ul>
             </nav> 
         </header>
