--- a/gossip.html
+++ b/gossip.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             <nav>
-                <img src="imagens/midnight-logo.png" alt="logo midnight news">
+                <a href="index.html"><img src="imagens/midnight-logo.png" alt="logo midnight news"></a>
                 <ul>
                     <a href="index.html"><li>Home</li></a>
                     <a href="about.html"><li>Sobre Nós</li></a>
