add: novas noticias

--- a/index.html
+++ b/index.html
@@ -75,6 +75,20 @@
                         </a>
                     </div>
                 </div>
+                <div class="noticias">
+                    <div class="charli">
+                        <a href="#" target="_blank">
+                            <div class="not-image"></div>
+                            <p>O que que é brat? Entenda o impacto musical da era da Charli xcx</p>
+                        </a>
+                    </div>
+                    <div class="sabrina">
+                        <a href="#" target="_blank">
+                            <div class="not-image"></div>
+                            <p>Expresso para #1 Billboard. Entenda todo trajeot musical da Sabrina Carpenter</p>
+                        </a>
+                    </div>
+                </div>
             </div>
         </main>
         
