add: politicas pagina

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div>
                 <h3>Envie sua Midnights Gossip</h3>
                 <hr>
-                <p>Nos enviando a partir deste formulários, sua gossip chegará até nossa equipe, que irá avaliar a suposta afirmação e decidir se será postada ou não. Se atente em seguir nossas políticas de uso.</p>
+                <p>Nos enviando a partir deste formulários, sua gossip chegará até nossa equipe, que irá avaliar a suposta afirmação e decidir se será postada ou não. Se atente em seguir nossas <a href="politics.html">políticas de uso</a>.</p>
                 <div>
                     <form>
                         <label for="name">Nome (como deseja ser creditado)</label>
