add: adições finais do site

--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/estilo.css" media="screen" />
+        <link rel="stylesheet" type="text/css" href="css/noticias.css" media="screen" />
         <title>Sobre Nós</title>
     </head>
     <body>
@@ -13,13 +14,27 @@
                 <ul>
                     <a href="index.html"><li>Home</li></a>
                     <a href="about.html"><li>Sobre Nós</li></a>
-                    <a href="gossip.html"><li>Fofoca da Madruga</li></a>
+                    <a href="banner.html"><li>Fofoca da Madruga</li></a>
                 </ul>
             </nav> 
         </header>
         <main>
         </main>
-        
+            <section class="about">
+                <h1>SOBRE NÓS</h1>
+
+                <p>Somos a Midnights News Enterprise, o seu destino número um para todas as fofocas, intrigas e segredos do mundo das celebridades. Aqui, mergulhamos de cabeça nos bastidores da fama, trazendo para você as notícias mais quentes e os detalhes mais suculentos.</p>
+
+                <h4>Quem Somos?</h4> <p>Somos uma equipe apaixonada por cultura pop, música, cinema e tudo o que envolve as estrelas. Nossos repórteres estão sempre de olho nos eventos mais exclusivos, nos tapetes vermelhos mais glamorosos e nas redes sociais mais movimentadas. Não deixamos passar nada!</p>
+
+                <h4>O Que Oferecemos?</h4> <p>Aqui na Midnights News Enterprise, você encontrará:</p> <ul> <li><strong>Notícias Exclusivas:</strong> Investigamos a fundo para trazer informações que você não encontrará em nenhum outro lugar.</li> <li><strong>Fofocas dos Bastidores:</strong> Quer saber o que acontece quando as câmeras não estão gravando? Nós temos os detalhes picantes.</li> <li><strong>Entrevistas Reveladoras:</strong> Conversamos com as celebridades e arrancamos confissões surpreendentes.</li> <li><strong>Reviews de Filmes e Séries:</strong> Não assista nada antes de conferir nossa opinião!</li> <li><strong>Curiosidades e Teorias:</strong> Exploramos os mistérios e as teorias mais malucas do mundo do entretenimento.</li> </ul>
+
+                <h4>Por Que Nos Escolher?</h4> <p>Porque somos apaixonados pelo que fazemos! Nosso compromisso é trazer conteúdo divertido, envolvente e, claro, um pouco atrevido. Afinal, quem não gosta de uma boa fofoca?</p>
+
+                <h4>Conecte-se Conosco!</h4> <p>Siga-nos nas redes sociais, comente em nossos artigos e compartilhe suas próprias teorias. Na Midnights News Enterprise, todos são bem-vindos para se juntar à conversa!</p>
+
+                <p>Este artigo é pura especulação baseada em amor pela cultura pop e pela nossa querida Midnights News Enterprise. 🌟</p>
+            </section>
         <footer>
             <adress>
                 Midnights News Enterprise<br>Guarulhos, SP, 64533-040.
