--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <ul>
                     <a href="index.html"><li>Home</li></a>
                     <a href="about.html"><li>Sobre Nós</li></a>
-                    <a href="gossip.html"><li>Fofoca da Madruga</li></a>
+                    <a href="banner.html"><li>Fofoca da Madruga</li></a>
                 </ul>
             </nav> 
         </header>
@@ -51,7 +51,7 @@
         <main>
             <!-- BANNER -->
             <div id="banner-principal">
-                <a href="banner.html" target="_blank">
+                <a href="banner.html">
                     <div class="banner-image"></div>
                     <h2>Entenda: O que realmente ocorreu entre SxSxC (Sabrina, Shawn e Camila)</h2>
                 </a>
@@ -63,13 +63,13 @@
                 <hr>
                 <div class="noticias">
                     <div class="taylor">
-                        <a href="#" target="_blank">
+                        <a href="banner-taylor.html">
                             <div class="not-image"></div>
                             <p>Não reputou? Veja indícios que Reputation Taylor's Version está mais próximo do que você imagina</p>
                         </a>
                     </div>
                     <div class="katy">
-                        <a href="#" target="_blank">
+                        <a href="banner-katy.html">
                             <div class="not-image"></div>
                             <p>Katy Floperry? Entenda todo hate recebido na era 143 da cantora estadunidense</p>
                         </a>
@@ -77,13 +77,13 @@
                 </div>
                 <div class="noticias">
                     <div class="charli">
-                        <a href="#" target="_blank">
+                        <a href="banner-charli.html">
                             <div class="not-image"></div>
                             <p>O que que é brat? Entenda o impacto musical da era da Charli xcx</p>
                         </a>
                     </div>
                     <div class="sabrina">
-                        <a href="#" target="_blank">
+                        <a href="banner-sabrina.html">
                             <div class="not-image"></div>
                             <p>Expresso para #1 Billboard. Entenda todo trajeot musical da Sabrina Carpenter</p>
                         </a>
