--- a/politics.html
+++ b/politics.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/estilo.css" media="screen" />
+        <link rel="stylesheet" type="text/css" href="css/noticias.css" media="screen" />
         <title>Políticas</title>
     </head>
     <body>
@@ -13,11 +14,24 @@
                 <ul>
                     <a href="index.html"><li>Home</li></a>
                     <a href="about.html"><li>Sobre Nós</li></a>
-                    <a href="gossip.html"><li>Fofoca da Madruga</li></a>
+                    <a href="banner.html"><li>Fofoca da Madruga</li></a>
                 </ul>
             </nav> 
         </header>
         <main>
+            <section class="about">
+                <h1>POLÍTICAS DA EMPRESA</h1>
+
+                <h4>1. Introdução</h4> <p>A Midnights News Enterprise é dedicada a fornecer notícias e fofocas do mundo do entretenimento de forma responsável e ética. Nossa política de envio de fofocas visa manter altos padrões de qualidade, veracidade e respeito.</p>
+                <h4>2. Diretrizes Gerais</h4> <p>Os colaboradores e fontes que enviam fofocas para a Midnights News Enterprise devem seguir as seguintes regras:</p> <ul> <li><strong>Veracidade:</strong> As informações enviadas devem ser baseadas em fatos verificáveis. Não aceitamos boatos ou especulações sem evidências sólidas.</li> <li><strong>Respeito:</strong> Não toleramos calúnia, difamação ou ataques pessoais. As fofocas devem ser escritas de forma respeitosa e imparcial.</li> <li><strong>Legalidade:</strong> Não aceitamos fofocas que violem leis de direitos autorais, privacidade ou qualquer outra legislação aplicável.</li> <li><strong>Isenção de Responsabilidade:</strong> Os colaboradores devem estar cientes de que a Midnights News Enterprise não se responsabiliza pelas informações enviadas por terceiros.</li> </ul>
+
+                <h4>3. Verificação e Edição</h4> <p>Nossa equipe editorial verifica todas as fofocas antes de publicá-las. Se necessário, faremos edições para garantir a precisão e a adequação.</p>
+
+                <h4>4. Denúncias e Retirada</h4> <p>Se alguém acredita que uma fofoca publicada é falsa, difamatória ou prejudicial, aceitamos denúncias e revisaremos o conteúdo. Se comprovado, removeremos a fofoca imediatamente.</p>
+
+                <h4>5. Conclusão</h4> <p>A Midnights News Enterprise está comprometida em fornecer fofocas de qualidade, respeitando os limites legais e éticos. Agradecemos a colaboração de todos os envolvidos!</p>
+
+            </section>
         </main>
         
         <footer>
